--- a/roles/playbook-intall-exporter.yml
+++ b/roles/playbook-intall-exporter.yml
@@ -1,8 +1,3 @@
----
-- name: Deploy node_exporter service
-  hosts: node_exporter
-  gather_facts: false
-  become: true
+- hosts: all
   roles:
     - role: node_exporter
-      state: present
