--- a/playbook-intall-exporter.yml
+++ b/playbook-intall-exporter.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   become: true
   become_method: sudo
-  become_user: ansible
+  become_user: azureuser
   timeout: 30 
   roles:
     - role: node_exporter
